install bootstrap elements and  update readme

--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" /> -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>EMBRACE - Celebrate Diversity, Value Equality</title>
+    <title>EMBRACE Diversity & Equality</title>
 </head>
 <body>
-    Hello World
+    <header>
+        <div class="container ">
+            <div class="row">
+                <div class="col-4 border">EMBRACE - Celebrate Diversity, Value Equality</div>
+                <div class="col-2 border">Home</div>
+                <div class="col-2 border">Growth</div>
+                <div class="col-2 border">Be the change</div>
+                <div class="col-2 border">About</div>                
+            </div>
+            <!-- Hello World -->
+        </div>
+       
+    </header>    
 </body>
 </html>
