last commit of day

--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-4 border">EMBRACE - Celebrate Diversity, Value Equality</div>
-                <div class="col-2 border">Home</div>
-                <div class="col-2 border">Growth</div>
-                <div class="col-2 border">Be the change</div>
-                <div class="col-2 border">About</div>                
-            </div>
-            <!-- Hello World -->
+        <!-- <div class="container"> -->
+        <div class="row">
+            <div class="col-8 border">EMBRACE - Celebrate Diversity, Value Equality</div>
+            <div class="col-1 border">Home</div>
+            <div class="col-1 border">Growth</div>
+            <div class="col-1 border">Be the change</div>
+            <div class="col-1 border">About</div>                
         </div>
-       
+            <!-- Hello World -->
+        <!-- </div> -->       
     </header>    
 </body>
 </html>
