add .logo to code

--- a/index.html
+++ b/index.html
@@ -4,24 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="EMBRACE Diversity & Equality. Knowldege base for Equality and Diversity learning and growth">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- framework links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" /> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/handshake.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/handshake.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/handshake.png">
+     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Title -->
     <title>EMBRACE Diversity & Equality</title>
 </head>
 <body>
     <header>
         <!-- <div class="container"> -->
         <div class="row">
-            <div class="col-8 border">EMBRACE - Celebrate Diversity, Value Equality</div>
-            <div class="col-1 border">Home</div>
-            <div class="col-1 border">Growth</div>
-            <div class="col-1 border">Be the change</div>
-            <div class="col-1 border">About</div>                
-        </div>
-            <!-- Hello World -->
-        <!-- </div> -->       
-    </header>    
+            <a href="index.html" class="col-md-4 logo">
+                <img src="../images/logo.png" class="img-fluid logo" alt="Logo">
+            </a>
+            <div class="col-md-8 border">EMBRACE - Celebrate Diversity, Value Equality</div>
+        </div>   
+        <div class="row">   
+            <div class="col-md-8 border"></div>
+            <div class="col-md-1 border">Home</div>
+            <div class="col-md-1 border">Growth</div>
+            <div class="col-md-1 border">Be the change</div>
+            <div class="col-md-1 border">About</div>                
+        </div>           
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
+    </body>
 </body>
 </html>
