alter bg_color on titles

--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
 
 <body>
     <header>
-        <!-- <div class="container"> -->
         <div class="row">
             <a href="index.html" class="col-md-4 logo"></a>
-            <div class="col-md-8 border">EMBRACE - Celebrate Diversity, Value Equality</div>
-            <div class="row">
-                <div class="col-md-8 border"></div>
-                <div class="col-md-1 border">Home</div>
-                <div class="col-md-1 border">Growth</div>
-                <div class="col-md-1 border">Be the change</div>
-                <div class="col-md-1 border">About</div>
+            <div class="col-md-8 border headings">
+                <div class="col">
+                    <h1 class="heading">EMBRACE</h1>     
+                    <h2 class="sub_heading">Celebrate Diversity, Value Equality</h2>     
+                </div>     
+            </div> 
             </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 border"></div>
+            <div class="col-md-1 border">Home</div>
+            <div class="col-md-1 border">Growth</div>
+            <div class="col-md-1 border">Be the change</div>
+            <div class="col-md-1 border">About</div>
+        </div>
     </header>
     <section>
 
