addition of and position of nav items

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body>
     <header>
-        <div class="row">
+        <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo"></a>
-            <div class="col-md-8 border headings">
+            <div class="col-md-8 headings">
                 <div class="col">
                     <h1 class="heading">EMBRACE</h1>     
                     <h2 class="sub_heading">Celebrate Diversity, Value Equality</h2>     
@@ -38,19 +38,20 @@
             </div> 
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8 border"></div>
-            <div class="col-md-1 border">Home</div>
-            <div class="col-md-1 border">Growth</div>
-            <div class="col-md-1 border">Be the change</div>
-            <div class="col-md-1 border">About</div>
+        <div class="row" id="nav">
+            <div class="col-md-8"></div>
+            <div class="col-md-1 home">Home</div>
+            <div class="col-md-1 growth">Growth</div>
+            <div class="col-md-1 change">Be the change</div>
+            <div class="col-md-1 about">About</div>
         </div>
     </header>
     <section>
 
     </section>
     <footer>
-
+        <div class="row no-gutters"></div>
+            <div class="col-md-12 footer"></div>
     </footer>
 </body>
 </body>
