addition of growth, change and about pages

--- a/change.html
+++ b/change.html
@@ -32,7 +32,7 @@
             <a href="index.html" class="col-md-4 logo"></a>
             <div class="col-md-8 headings">
                 <div class="jumbotron">
-                    <h1 class="display-3">EMBRACE</h1>
+                    <h1 class="display-3">EMBRACE BEING THE CHANGE</h1>
                     <p class="display-4">Celebrate Diversity, Value Equality</p>
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
