--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo"></a>
+            <a href="index.html" class="col-12 col-md-6 col-lg-4 logo"></a>
             <div class="col-md-8 headings">
                 <div class="jumbotron">
                     <h1 class="display-3">EMBRACE</h1>
