--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <h1 class="display-3">EMBRACE</h1>
                     <p class="display-4">Celebrate Diversity, Value Equality</p>
                     <hr class="my-4">
-                    <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
-                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Growth</a>
-                    <a class="btn btn-success btn-lg" href="change.html" role="button">Be the change</a>
-                    <a class="btn btn-secondary btn-lg" href="about.html" role="button">About</a>
+                    <a class="btn btn-primary btn-lg custom-btn" href="index.html" role="button">Home</a>
+                    <a class="btn btn-info btn-lg custom-btn" href="growth.html" role="button">Growth</a>
+                    <a class="btn btn-success btn-lg custom-btn" href="change.html" role="button">Be the change</a>
+                    <a class="btn btn-secondary btn-lg custom-btn" href="about.html" role="button">About</a>
                 </div>
             </div>
         </div>
