adding writen content

--- a/growth.html
+++ b/growth.html
@@ -45,13 +45,89 @@
     </header>
     <section>
         <div class="row">
-            <div class="col-md-12 pic"></div>
+            <div class="col-md-6 border learn">
+                <h1 class="heading">What is workplace equality and diversity?</h1>
+                <p>Equality and diversity in a workplace mean a handful of things. They’re about treating each member of
+                    staff fairly and the same, respecting them for their age, race, gender, cultural background, skills,
+                    beliefs, sexual orientation, career experiences and more. But how are equality and diversity
+                    different? <br><br> Equality is about making sure everyone has equal opportunity and is treated the
+                    same, regardless of their characteristics. Diversity, on the other hand, is more than equality. It’s
+                    about creating a culture that values individual differences for the benefit of individuals,
+                    businesses and society. For a workplace to be diverse, it will typically include a range of people
+                    with differences between them, such as age, ethnicity, religion, beliefs, race, sex and sexual
+                    orientation and more</p>
+            </div>
+
+            <div class="col-md-6 border learn">
+                <h1 class="heading">What is inclusion in the workplace?</h1>
+                <p>Having a diverse workplace has a whole host of benefits that can give your company a competitive
+                    edge. As well as bringing a wide range of ideas, skills and resources to your business, it also
+                    brings unique energy, which is invaluable — especially in an office environment.
+                    <br><br>Organisations that embrace diversity also invite a wider talent pool, allowing them to reap
+                    the rewards of a broader market and increased productivity. What’s more, the organisation will gain
+                    respect from outsiders, which will boost its popularity and profile within the community. <br><br>
+                    There’s more. A business that promotes diversity and inclusion will also see the following benefits:
+                <ul>
+                    <li>Absences decrease when employees are happy at work</li>
+                    <li>Teamwork and collaboration thrive in a diverse environment</li>
+                    <li>Employee loyalty and retention is strong when employees are understood</li>
+                    <li>Discrimination claims are less likely to occur with the correct policies and procedures in place
+                    </li>
+                </ul>
+                    In addition to nurturing happy, productive and loyal employees through excellent diversity and inclusion
+                    practices, how you act in this area as a business will be relevant to your compliance with the Equality
+                    Act 2010.<br><br>At The HR Dept, we’ll ensure that your business is compliant through your policies, procedures and
+                    contracts. We review each business individually and take a personal approach with suggestions on how to
+                    improve diversity, inclusion and equality in the workplace to drive your business forward.<br><br> To learn more about how your business will benefit from our services, give us a call or drop message on any of the below social links.
+                </p>
+            </div>
         </div>
 
     </section>
-    <footer>
-        <div class="row "></div>
-            <div class="col-md-12"></div>
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-4 text-center">
+                <ul class="list-inline social">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.facebook.com/">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://twitter.com/">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://uk.linkedin.com/">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://uk.pinterest.com/">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.instagram.com/">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.youtube.com/">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
     </footer>
 </body>
 </body>
