adding writen content for change

--- a/change.html
+++ b/change.html
@@ -45,7 +45,53 @@
     </header>
     <section>
         <div class="row">
-            <div class="col-md-12 pic"></div>
+            <div class="col-md-6 learn">
+                <h1 class="heading">How can I promote equality and diversity in the workplace?</h1>
+                <p>Documented policies and procedures that promote diversity, inclusion and equality in the workplace
+                    are the first step. They will begin to protect employees and the wider business from unfair
+                    treatment and disputes involving discrimination.<br><br>Actively building on this foundation by
+                    considering company culture and the way things are done in your business will lead to developing a
+                    robust and reliable strategy on diversity, inclusion and equality.<br><br>By embracing diversity and
+                    inclusion within your organisation, it will build your business’s knowledge on a variety of aspects
+                    including; cultures, faiths, disabilities, sexual orientation, and gender to name a few. It will
+                    also enable employees to feel respected and part of a diverse, modern business.<br><br>Diversity and
+                    inclusion training is a good idea to put paper policies into real life scenarios and get your team
+                    working together. It can also help your defence should you ever face a claim.<br><br>creating a
+                    strategy that includes the following things:<br>
+                <ul>
+                    <li>Putting equality policies in place.</li>
+                    <li>Identifying and preventing unconscious biases.</li>
+                    <li>Creating an inclusive culture for all staff members.</li>
+                    <li>Supporting staff and helping them develop to their full potential.</li>
+                    <li>Ensuring policies, procedures, and processes don’t discriminate in any way.</li>
+                </ul>
+                    It is a sensitive area of HR with complex legal obligations. So we advise that if you are seeking to
+                    review your approach to diversity and inclusion, or are considering diversity and inclusion training, to
+                    get in touch with your local HR Dept for professional advice.</p>
+            </div>
+
+            <div class="col-md-6 learn">
+                <h1 class="heading">Understanding the Equality Act 2010</h1>
+                <p>Equality law applies from before you have even hired someone for your business. From advertising a
+                    role, right the way through to parting ways with an employee, and everything that happens in
+                    between.<br><br>Familiarity with the Equality Act is essential to be able to provide fair
+                    opportunities at work and comply with employment law.<br><br>The Equality Act is comprehensive, and
+                    it is recommended that employers seek professional HR advice to ensure compliance. But a useful
+                    introduction for employers is to know the nine protected characteristics which the act covers. These
+                    are:
+                <ul>
+                    <li>age</li>
+                    <li>disability</li>
+                    <li>gender reassignment</li>
+                    <li>marriage and civil partnership</li>
+                    <li>pregnancy and maternity</li>
+                    <li>race</li>
+                    <li>religion or belief</li>
+                    <li>sex</li>
+                    <li>sexual orientation</li>
+                </ul>
+                </p>
+            </div>
         </div>
 
     </section>
