--- a/growth.html
+++ b/growth.html
@@ -32,11 +32,11 @@
             <a href="index.html" class="col-md-4 logo"></a>
             <div class="col-md-8 headings">
                 <div class="jumbotron">
-                    <h1 class="display-3">EMBRACE GROWTH</h1>
+                    <h1 class="display-3">EMBRACE LEARNING</h1>
                     <p class="display-4">Celebrate Diversity, Value Equality</p>
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
-                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Growth</a>
+                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Learning</a>
                     <a class="btn btn-success btn-lg" href="change.html" role="button">Be the change</a>
                     <a class="btn btn-secondary btn-lg" href="about.html" role="button">About</a>
                 </div>
@@ -45,7 +45,7 @@
     </header>
     <section>
         <div class="row">
-            <div class="col-md-6 border learn">
+            <div class="col-md-6 learn">
                 <h1 class="heading">What is workplace equality and diversity?</h1>
                 <p>Equality and diversity in a workplace mean a handful of things. They’re about treating each member of
                     staff fairly and the same, respecting them for their age, race, gender, cultural background, skills,
@@ -58,7 +58,7 @@
                     orientation and more</p>
             </div>
 
-            <div class="col-md-6 border learn">
+            <div class="col-md-6 learn">
                 <h1 class="heading">What is inclusion in the workplace?</h1>
                 <p>Having a diverse workplace has a whole host of benefits that can give your company a competitive
                     edge. As well as bringing a wide range of ideas, skills and resources to your business, it also
