adding writen content for about

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     <p class="display-4">Celebrate Diversity, Value Equality</p>
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
-                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Growth</a>
+                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Learning</a>
                     <a class="btn btn-success btn-lg" href="change.html" role="button">Be the change</a>
                     <a class="btn btn-secondary btn-lg" href="about.html" role="button">About</a>
                 </div>
@@ -45,8 +45,46 @@
     </header>
     <section>
         <div class="row">
-            <div class="col-md-12 pic"></div>
+            <div class="col-md-6 learn">
+                <h1 class="heading">Contact me</h1>
+                <p><ul>
+                    <li>Name: Ms. Ima Ginary</li>
+                    <li>Address: 42 Whimsy Way, Joketown, Humorland, ZIP: 12345</li>
+                    <li>Email: ima.ginary@funnymail.com</li>
+                    <li>Phone: +987-654-3210</li>
+                    <li>Website: www.imaginarium.com</li>
+                    <li>Company: Laughs Unlimited Inc.</li>
+                    <li>Job Title: Chief Fun Officer (CFO)</li>
+                    <li>Fax: +555-HA-HA-HA</li>
+                    <li>P.O. Box: 1010 Giggle Street</li>
+                  </ul>
+                </p>
+            </div>
+
+            <div class="col-md-6 learn">
+                <h1 class="heading">Understanding the Equality Act 2010</h1>
+                <p>Equality law applies from before you have even hired someone for your business. From advertising a
+                    role, right the way through to parting ways with an employee, and everything that happens in
+                    between.<br><br>Familiarity with the Equality Act is essential to be able to provide fair
+                    opportunities at work and comply with employment law.<br><br>The Equality Act is comprehensive, and
+                    it is recommended that employers seek professional HR advice to ensure compliance. But a useful
+                    introduction for employers is to know the nine protected characteristics which the act covers. These
+                    are:
+                <ul>
+                    <li>age</li>
+                    <li>disability</li>
+                    <li>gender reassignment</li>
+                    <li>marriage and civil partnership</li>
+                    <li>pregnancy and maternity</li>
+                    <li>race</li>
+                    <li>religion or belief</li>
+                    <li>sex</li>
+                    <li>sexual orientation</li>
+                </ul>
+                </p>
+            </div>
         </div>
+
 
     </section>
     <footer class="container-fluid">
