--- a/change.html
+++ b/change.html
@@ -36,7 +36,7 @@
                     <p class="display-4">Celebrate Diversity, Value Equality</p>
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
-                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Growth</a>
+                    <a class="btn btn-info btn-lg" href="growth.html" role="button">Learning</a>
                     <a class="btn btn-success btn-lg" href="change.html" role="button">Be the change</a>
                     <a class="btn btn-secondary btn-lg" href="about.html" role="button">About</a>
                 </div>
