adding updated content for about

--- a/change.html
+++ b/change.html
@@ -56,8 +56,7 @@
                     including; cultures, faiths, disabilities, sexual orientation, and gender to name a few. It will
                     also enable employees to feel respected and part of a diverse, modern business.<br><br>Diversity and
                     inclusion training is a good idea to put paper policies into real life scenarios and get your team
-                    working together. It can also help your defence should you ever face a claim.<br><br>creating a
-                    strategy that includes the following things:<br>
+                    working together. creating a strategy that includes the following things:<br>
                 <ul>
                     <li>Putting equality policies in place.</li>
                     <li>Identifying and preventing unconscious biases.</li>
