Addition of validation pics

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- framework links-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-        type="text/css" />
+        type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        type="text/css" />
+        type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
-        type="text/css" />
+        type="text/css">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/handshake.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/handshake.png">
@@ -37,15 +37,18 @@
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg custom-btn" href="index.html" role="button">Home</a>
                     <a class="btn btn-info btn-lg custom-btn" href="growth.html" role="button">Learning</a>
-                    <a class="btn btn-success btn-lg custom-btn" href="change.html" role="button">Be the change</a>                    
+                    <a class="btn btn-success btn-lg custom-btn" href="change.html" role="button">Be the change</a>
                     <a class="btn btn-secondary btn-lg custom-btn" href="about.html" role="button">About</a>
                 </div>
             </div>
         </div>
     </header>
     <section>
-        <div class="row">
-            <div class="col-md-12 pic"></div>
+        <h2>Diversity and Equality</h2>
+        <div>
+            <div class="row">
+                <div class="col-md-12 pic"></div>
+            </div>
         </div>
     </section>
 
@@ -92,7 +95,7 @@
                 </ul>
             </div>
         </div>
-        </div>
+        
     </footer>
 </body>
 
