change pics from .png to webp

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <section>
-        <h2>Diversity and Equality</h2>
+        <h2 id="why">We are here to help you Embrace Diversity and Equality in your workplace</h2>
         <div>
             <div class="row">
                 <div class="col-md-12 pic"></div>
