add validation pics

--- a/growth.html
+++ b/growth.html
@@ -74,11 +74,14 @@
                     <li>Discrimination claims are less likely to occur with the correct policies and procedures in place
                     </li>
                 </ul>
-                    In addition to nurturing happy, productive and loyal employees through excellent diversity and inclusion
-                    practices, how you act in this area as a business will be relevant to your compliance with the Equality
-                    Act 2010.<br><br>At The HR Dept, we’ll ensure that your business is compliant through your policies, procedures and
-                    contracts. We review each business individually and take a personal approach with suggestions on how to
-                    improve diversity, inclusion and equality in the workplace to drive your business forward.<br><br> To learn more about how your business will benefit from our services, give us a call or drop message on any of the below social links.
+                In addition to nurturing happy, productive and loyal employees through excellent diversity and inclusion
+                practices, how you act in this area as a business will be relevant to your compliance with the Equality
+                Act 2010.<br><br>At The HR Dept, we’ll ensure that your business is compliant through your policies,
+                procedures and
+                contracts. We review each business individually and take a personal approach with suggestions on how to
+                improve diversity, inclusion and equality in the workplace to drive your business forward.<br><br> To
+                learn more about how your business will benefit from our services, give us a call or drop message on any
+                of the below social links.
                 </p>
             </div>
         </div>
