--- a/about.html
+++ b/about.html
@@ -79,7 +79,8 @@
                     <div class="row">
                         <div class="col-md-6 ">
                             <form role="form" id="sign_up" method="POST" action="/user/sign_up">
-                                <h2>Please Sign Up <small>- for more info and when changes occur to legislation - It's free and always will be.</small></h2>
+                                <h2>Please Sign Up <small>- for more info and when changes occur to legislation - It's
+                                        free and always will be.</small></h2>
                                 <hr class="colorgraph">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
@@ -153,8 +154,8 @@
                                         </a>
                                     </div>
                                     <div class="col-xs-6 col-md-6">
-                                        <a href="https://www.fallingfalling.com/" class="btn btn-success btn-block btn-lg"
-                                            target="_blank">
+                                        <a href="https://www.fallingfalling.com/"
+                                            class="btn btn-success btn-block btn-lg" target="_blank">
                                             Sign In
                                         </a>
                                     </div>
