--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </header>
     <section>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 learn">
                 <h1>About Embrace</h1>
                 <p>Welcome to Embrace, where we specialize in fostering knowledge for celebrating diversity and valuing
                     equality. Our mission is to create a world where every individual feels valued, respected, and
@@ -74,7 +74,7 @@
                 <p class="address"><strong>Email</strong>: <a href="mailto:info@embrace.org">info@embrace.org</a></p>
             </div>
 
-            <div class="col-md-6 ">
+            <div class="col-md-6 learn">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 ">
